@@ -1,6 +1,6 @@
 #!/bin/sh
 
 make distclean
-./configure CFLAGS="-Wall -W -g -ggdb -O0"
+./configure CPPFLAGS="-Wall -W -g -ggdb -O0"
 make
 
